[package]
name = "hm310_p_rs"
version = "0.0.1"
authors = ["U_Bren <ruben@caramail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.1"
tokio = { version = "*", features = ["full"] }