[package]
name = "hm310_p_rs"
version = "0.0.1"
authors = ["U_Bren <ruben@caramail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psu = {path = "../lib"}

tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.1"
tokio = { version = "*", features = ["full"] }
async-trait = "~0.1.0"
futures = "~0.3.0"
clap = "~3.0.0-beta.5"