[package]
name = "hm310_p_rs"
version = "0.0.1"
authors = ["U_Bren <ruben@caramail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psu = {path = "../lib"}

tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio-modbus = { version = "*" }
tokio-serial = { version = "5.4.1" }
#tokio-util = { version = "0.7.0", features = ["codec"] }
tokio = { version = "1.17.0", default-features = false }
async-trait = "0.1.52"
futures = { version = "0.3.21", optional = true }
clap = { version = "*", features = ["derive","cargo"] }
snafu = "*"
color-backtrace = { version = "0.5" }