[package]
name = "psu"
version = "0.1.0"
authors = ["U_Bren <ruben@caramail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.1"
tokio = { version = "*", features = ["full"] }
async-trait = "0.1.51"
futures = "0.3.17"
bitflags = "1.3.2"